<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/home"
        android:title="@string/home_st"
        android:icon="@drawable/homeicon"
        />
    <item
        android:id="@+id/stopwatch"
        android:title="@string/stopwatch_st"
        android:icon="@drawable/stopwatch"
        />
    <item
        android:id="@+id/alarmclock"
        android:title="@string/alarmclock_st"
        android:icon="@drawable/alarmclock"
        />
    <item
        android:id="@+id/graphLine"
        android:title="@string/Grap_Lin_men"
        android:icon="@drawable/line_chart"
        />
    <item
        android:id="@+id/reminder"
        android:title="Reminders"
        android:icon="@drawable/remind_icon"
        />

</menu>