<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/teal2ndver"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="168dp"
        android:layout_height="118dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="11dp"
        android:layout_marginEnd="243dp"
        android:layout_marginBottom="602dp"
        android:scaleType="fitCenter"
        android:src="@drawable/sleepfox" />

    <TextView
        android:id="@+id/CDJMTitle"
        android:layout_width="wrap_content"
        android:layout_height="98dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="172dp"
        android:layout_marginTop="26dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="607dp"
        android:text="@string/cdjm_sleep_tracker_st"
        android:textColor="@color/white"
        android:textSize="40sp"
        android:textStyle="bold|italic"

        />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="444dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="131dp"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="156dp"
        app:cardCornerRadius="20dp">


        <ImageView
            android:layout_width="444dp"
            android:layout_height="wrap_content"
            android:scaleType="fitCenter"
            android:src="@drawable/moonlogotwo" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="30dp"
            android:layout_marginStart="80dp"
            android:layout_marginEnd="30dp"
            app:srcCompat="@drawable/homeicon" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/imageView"
            android:layout_alignBaseline="@+id/imageView"
            android:layout_marginTop="30dp"
            android:layout_marginStart="130dp"
            android:text="@string/for_home_icon_st"
            android:textSize="30sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_below="@id/imageView"
            android:layout_marginTop="90dp"
            android:layout_marginStart="80dp"
            app:srcCompat="@drawable/stopwatch" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/imageView2"
            android:layout_alignBaseline="@+id/imageView2"
            android:layout_marginTop="85dp"
            android:layout_marginStart="130dp"
            android:text="@string/for_sleep_watch_st"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_below="@id/imageView2"
            android:layout_marginTop="150dp"
            android:layout_marginStart="80dp"
            app:srcCompat="@drawable/alarmclock" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/imageView3"
            android:layout_alignBaseline="@+id/imageView3"
            android:layout_marginTop="150dp"
            android:layout_marginStart="130dp"
            android:text="@string/for_alarm_clock_st"
            android:textSize="30sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_below="@id/imageView3"
            android:layout_marginTop="210dp"
            android:layout_marginStart="80dp"
            app:srcCompat="@drawable/line_chart" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/imageView4"
            android:layout_alignBaseline="@+id/imageView4"
            android:layout_marginTop="210dp"
            android:layout_marginStart="130dp"
            android:text="@string/for_sleep_stats_st"
            android:textSize="30sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            />

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_below="@id/imageView4"
            android:layout_marginTop="270dp"
            android:layout_marginStart="80dp"
            app:srcCompat="@drawable/remind_icon" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/imageView5"
            android:layout_alignBaseline="@+id/imageView5"
            android:layout_marginTop="270dp"
            android:layout_marginStart="130dp"
            android:text="@string/for_sleep_reminders_str"
            android:textSize="30sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="320dp"
            android:layout_marginStart="90dp"
            android:text="@string/sleep_hygiene_optomized_st"
            android:textSize="40sp"
            android:textStyle="bold|italic"
            android:textColor="@color/black"
            />


    </androidx.cardview.widget.CardView>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        app:itemBackground="@color/teal2ndver"
        app:itemIconTint="@drawable/selector"
        app:itemTextColor="@drawable/selector"
        app:menu="@menu/menu_navigation" />



    <DigitalClock

        android:layout_width="250dp"
        android:layout_height="79dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="107dp"
        android:layout_marginLeft="140dp"
        android:layout_marginTop="585dp"
        android:layout_marginEnd="53dp"
        android:layout_marginBottom="67dp"
        android:textColor="@color/white"
        android:textSize="50dp"
        android:textStyle="bold" />

</RelativeLayout>